@@ -1,10 +1,12 @@
-CHANGES.txt - 01/14/2006
+CHANGES.txt - 01/18/2006
 ------------------------
 
 CHANGES IN CUPS V1.2.0b1
 
+	- The lpmove command now allows you to move all jobs for
+	  a given queue (STR #56)
 	- The web interface now supports moving of a job or jobs
-	  to another queue.
+	  to another queue (STR #56)
 	- The web interface now provides searching, paging, and
 	  changing of the sort/display order of classes, jobs,
 	  and printers.
